# Changelog
# $Id$
nn-nn-15 - Version 5.1.36

  - Fix for BUG#20453712, CLOB.SETSTRING() WITH VALID INPUT RETURNS EXCEPTION

  - Fix for BUG#20453671, CLOB.POSITION() API CALL WITH CLOB INPUT RETURNS EXCEPTION

02-23-15 - Version 5.1.35

  - Expose PreparedStatment.ParseInfo for external usage, with no capture of the connection, which allows for global, highly-concurrent parse caches to be
    implemented.

  - Fix for Bug#75309 (20272931), mysql connector/J driver in streaming mode will in the blocking state.

  - New property 'readOnlyPropagatesToServer' controls the implicit propagation of read only transaction access mode to server.

  - Fix for Bug#54095 (11761585), Unnecessary call in newSetTimestampInternal.
    Test case only. The bug was fixed as a consequence of the patch for Bug#71084.

  - Fix for Bug#67760 (15936413), Deadlock when concurrently executing prepared statements with Timestamp objects.

  - Fix for Bug#71084 (18028319), Wrong java.sql.Date stored if client and server time zones differ.
    Two connection properties added, "noTimezoneConversionForDateType" and "cacheDefaultTimezone", to define if and how time zone conversions are available to
    DATE data type values. 

  - Fix for Bug#75080 (20217686), NullPointerException during setTimestamp on Fabric connection.

  - Fix for Bug#75168 (20204783), loadBalanceExceptionChecker interface cannot work using JDBC4/JDK7.

  - Fix for Bug#73595 (19465516), Replace usage of StringBuffer in JDBC driver.

  - Fix for Bug#18925727, SQL INJECTION IN MYSQL JDBC DRIVER.

  - Fix for Bug#74998 (20112694), readRemainingMultiPackets not computed correctly for rows larger than 16 MB.

11-03-14 - Version 5.1.34

  - Fix for Bug#73012 (19219158), Precedence between timezone options is unclear.

  - Implement support for connecting through SOCKS proxies (WL#8105). Connection properties supporting this are socksProxyHost, socksProxyPort.
